# cosmic_crypto_signal_server

./: .gitignore  Procfile  pyproject.toml  requirements.txt
.temp/: dbman.py  test.py  test_data.py  test_endpoint.py
phone_script/: fetch.py
signal_server/: __main__.py  _schema.py  app.py  helper.py  logger.py  models.py  signal_dispatch.py
