[tool.poetry]
name = "signal_server"
version = "0.1.0"
description = ""
authors = ["Yehya Usman <yehya.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
pony = "^0.7.14"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
